<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.lightdream</groupId>
    <artifactId>CommandManager</artifactId>
    <version>1.8</version>

    <distributionManagement>
        <repository>
            <id>lightdream-api</id>
            <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>lightdream-repo</id>
            <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>

        <!-- Own repos -->
        <dependency>
            <groupId>dev.lightdream</groupId>
            <artifactId>MessageBuilder</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>dev.lightdream</groupId>
            <artifactId>Logger</artifactId>
            <version>LATEST</version>
        </dependency>

    </dependencies>

</project>